# prone-model

./: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  pyproject.toml
.agent-hooks/: check_build.sh  check_size.sh
.codex/: hooks.json
.codex/hooks/: verify_pipeline.sh
.github/hooks/: hooks.json
components/espressif__esp-dl/: .component_hash  CHECKSUMS.json  CMakeLists.txt  idf_component.yml
components/espressif__esp-dl/audio/: README.md
components/espressif__esp-dl/audio/common/: dl_audio_wav.cpp  dl_audio_wav.hpp
components/espressif__esp-dl/audio/speech_features/: dl_fbank.cpp  dl_mfcc.cpp  dl_spectrogram.cpp  dl_speech_features.cpp
components/safety_harness/: CMakeLists.txt  safety_harness.c
components/safety_harness/include/: safety_harness.h
components/safety_harness/tools/: check_safety_rules.py
docs/: ACCEPTANCE_CRITERIA.md  COLLECTION_POLICY.md  DATA_QUALITY.md  DESIGN.md  LABELING_GUIDELINES.md  NAMING_RULES.md  OPERATIONS.md  PLAN.md  REQUIREMENTS.md  SPECIFICATIONS.md  TODO.md
docs/ADR/: 202604041744.md  202604041857.md  202604290959.md
docs/TASK/: 202604290959.md  current-task.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  face_detection.cpp  face_detection.h  idf_component.yml  main.c  prone_inference_bridge.cpp  prone_inference_bridge.h  storage.c  storage.h  storage_csv.c  storage_csv.h  validation.c  validation.h  web_service.c  web_service.h  web_ui.c  web_ui.h
main/web/: app.css  app.js  index.html
pc_pipeline/: __init__.py  __main__.py  pipeline.py
(+15 files in other folders)
